--- a/ideas/www/landing/index.html
+++ b/ideas/www/landing/index.html
@@ -35,26 +35,26 @@
 
   <!-- Google-Specific CTA (Structured Data for Rich Snippets) -->
   <script type="application/ld+json">
- {
- "@context": "https://schema.org",
- "@type": "SoftwareApplication",
- "name": "IDEAS",
- "description": "IDEAS helps you capture ideas, and pursue them with clarity. Lifetime access for only $6.94!",
- "applicationCategory": "Productivity",
- "operatingSystem": "Any",
- "offers": {
- "@type": "Offer",
- "price": "6.94",
- "priceCurrency": "USD",
- "availability": "https://schema.org/InStock"
- },
- "creator": {
- "@type": "Person",
- "name": "Adam Dawoodjee",
- "url": "https://x.com/daogadam"
- },
- "callToAction": "Get IDEAS Now on Google - Lifetime Access for $6.94!"
- }
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "IDEAS",
+    "description": "IDEAS helps you capture ideas, and pursue them with clarity. Lifetime access for only $6.94!",
+    "applicationCategory": "Productivity",
+    "operatingSystem": "Any",
+    "offers": {
+    "@type": "Offer",
+    "price": "6.94",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+    },
+    "creator": {
+    "@type": "Person",
+    "name": "Adam Dawoodjee",
+    "url": "https://x.com/daogadam"
+    },
+    "callToAction": "Get IDEAS Now on Google - Lifetime Access for $6.94!"
+  }
  </script>
 
  <script>
@@ -67,7 +67,7 @@
     "enabled":true,
     "chatButtonSetting":{
         "backgroundColor":"#00e785",
-        "ctaText":"",
+        "ctaText":"Feedback & Support",
         "borderRadius":"25",
         "marginLeft": "0",
         "marginRight": "20",
@@ -121,6 +121,22 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/style.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M93E0HE4ST"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-M93E0HE4ST');
+  </script>
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "qxrpob6jt0");
+</script>
 
 </head>
 
@@ -143,7 +159,7 @@
         <a href="https://take.app/daog/p/cm8ingnjd001dl203iba7h0vp" class="cta-btn">Start Capturing Ideas Now</a>
       </div>
       <div class="hero-image">
-        <img src="/files/board (3).png" alt="IDEAS App front page">
+        <img src="/files/board (1).avif" alt="IDEAS App front page">
       </div>
     </section>
 
