--- a/ideas/www/privacy.html
+++ b/ideas/www/privacy.html
@@ -6,18 +6,25 @@
     <title>IDEAS | Privacy Policy</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'G-M93E0HE4ST');
+    </script>
 </head>
 <body>
     <div class="container">
         <section class="privacy-policy">
             <h1 style="text-transform: uppercase; text-align: center; font-size: 60px; margin: 40px 0;">Privacy Policy</h1>
             <p class="effective-date" style="text-align: center; font-size: 18px; color: #ccc; margin-bottom: 50px;">
-                Effective Date: March 31, 2025
+                Effective Date: April 2, 2025
             </p>
 
             <div class="section">
                 <h2>1. Introduction</h2>
-                <p>Welcome to IDEAS, a Notion-based productivity app template designed to help you capture your best ideas and improve focus. Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you use IDEAS.</p>
+                <p>Welcome to IDEAS, a Notion-based productivity app designed to help you capture your best ideas and improve focus. Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you use IDEAS.</p>
                 <p>By using IDEAS, you agree to the terms outlined below.</p>
             </div>
 
@@ -27,9 +34,9 @@
                 <ul>
                     <li><strong>Personal Information:</strong> Name and email when you purchase or sign up for IDEAS.</li>
                     <li><strong>Payment Data:</strong> Transaction details (e.g., amount, date) processed securely via our payment partner, Take.app, Network, Lenco, or any other provider.</li>
-                    <li><strong>Technical Data:</strong> IP address and device information for security and analytics purposes.</li>
+                    <li><strong>Technical Data:</strong> IP address, device information, and usage data (e.g., page views, clicks, scrolls) for security and analytics purposes via Google Analytics 4 and Microsoft Clarity.</li>
                 </ul>
-                <p>We do not access or store the content of your ideas entered into the Notion template—those remain private within your Notion account.</p>
+                <p>We do not access or store the content of your ideas entered into Notion—those remain private within your Notion account.</p>
             </div>
 
             <div class="section">
@@ -52,7 +59,9 @@
                 <h2>5. Sharing Your Information</h2>
                 <p>We do not sell or rent your personal data. We may share information with:</p>
                 <ul>
-                    <li><strong>Take.app:</strong> Our payment processor, to complete transactions.</li>
+                    <li><strong>Take.app, Lenco, DPO:</strong> Our payment processor(s), to complete transactions.</li>
+                    <li><strong>Google Analytics 4:</strong> To analyze website usage and improve user experience (see <a href="https://policies.google.com/privacy" target="_blank">Google’s Privacy Policy</a>).</li>
+                    <li><strong>Microsoft Clarity:</strong> To understand user behavior via heatmaps and session recordings (see <a href="https://privacy.microsoft.com/en-us/privacystatement" target="_blank">Microsoft’s Privacy Statement</a>).</li>
                     <li><strong>Regulatory authorities:</strong> If required by law.</li>
                 </ul>
             </div>
@@ -69,7 +78,7 @@
 
             <div class="section">
                 <h2>7. Cookies & Tracking</h2>
-                <p>We may use cookies on our website to enhance your browsing experience. You can disable cookies in your browser settings, though this may affect some functionality.</p>
+                <p>We use cookies and similar technologies (e.g., via Google Analytics 4 and Microsoft Clarity) on our website to enhance your browsing experience and analyze usage patterns. You can disable cookies in your browser settings, though this may limit analytics functionality and affect some features.</p>
             </div>
 
             <div class="section">
