--- a/ideas/www/refunds.html
+++ b/ideas/www/refunds.html
@@ -6,6 +6,13 @@
     <title>IDEAS | Refund Policy</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'G-M93E0HE4ST');
+    </script>
 </head>
 <body>
     <div class="container">
