--- a/ideas/www/refunds.html
+++ b/ideas/www/refunds.html
@@ -6,13 +6,6 @@
     <title>IDEAS | Refund Policy</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-  
-      gtag('config', 'G-M93E0HE4ST');
-    </script>
 </head>
 <body>
     <div class="container">
@@ -93,5 +86,6 @@
     </div>
 
     {% include "/templates/includes/footer.html" %}
+    {% include "/templates/includes/tracking_consent.html" %}
 </body>
 </html>
